--- a/index.html
+++ b/index.html
@@ -16,19 +16,100 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Portfolio</title>
   </head>
   <body>
-    <div class="header">
-      <h1>hey there</h1>
-      <h1>hey there</h1>
-      <h1>hey there</h1>
-      <h1>hey there</h1>
-      <h1>hey there</h1>
-      <h1>hey there</h1>
-      <h1>hey there</h1>
-      <h1>hey there</h1>
-      <h1>hey there</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">SEPIDE</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/index.html"
+              >Home <span class="sr-only"></span
+            ></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html#contact">Contanct me</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="top">
+      <h2>👋 Hi I am</h2>
+      <h1>Sepide Malek Mahmoudi</h1>
+      <h2>🇮🇷 frontend developer and computer engineer based in Iran</h2>
+      <a href="#" class="btn btn-primary shadow"> contact me</a>
+      <a href="#" class="btn btn-outline-dark">about me</a>
+    </div>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/Slide3.JPG" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <h2>Croissant Website</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Reprehenderit magni debitis ut velit totam distinctio quae deleniti
+            reiciendis quis, suscipit facere ex aspernatur quam et sit
+            praesentium dolore inventore perspiciatis in molestias. Quisquam
+            quos fugit numquam ipsum, consequatur vero corporis temporibus sed
+            repudiandae nesciunt autem ullam dolor. Cupiditate, itaque aut.
+          </p>
+          <a href="#" class="btn btn-primary shadow">
+            Launch croissant website</a
+          >
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <h2>Weather App</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Reprehenderit magni debitis ut velit totam distinctio quae deleniti
+            reiciendis quis, suscipit facere ex aspernatur quam et sit
+            praesentium dolore inventore perspiciatis in molestias. Quisquam
+            quos fugit numquam ipsum, consequatur vero corporis temporibus sed
+            repudiandae nesciunt autem ullam dolor. Cupiditate, itaque aut.
+          </p>
+          <a href="#" class="btn btn-primary shadow"> Launch weather app</a>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/Slide2.JPG" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/Slide1.JPG" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <h2>AI App</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Reprehenderit magni debitis ut velit totam distinctio quae deleniti
+            reiciendis quis, suscipit facere ex aspernatur quam et sit
+            praesentium dolore inventore perspiciatis in molestias. Quisquam
+            quos fugit numquam ipsum, consequatur vero corporis temporibus sed
+            repudiandae nesciunt autem ullam dolor. Cupiditate, itaque aut.
+          </p>
+          <a href="#" class="btn btn-primary shadow"> Launch AI app</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
