rounded the images
and maked about me page more responsive

--- a/about.html
+++ b/about.html
@@ -54,21 +54,21 @@
       <h2>🇮🇷 frontend developer and computer engineer based in Iran</h2>
       <div class="container">
         <div class="row mt-5">
-          <div class="col">
+          <div class="col-md-4 mb-5">
             <img
               src="/images/Slide1.JPG"
               alt=""
               class="img-fluid shadow rounded"
             />
           </div>
-          <div class="col">
+          <div class="col-md-4 mb-5">
             <img
               src="/images/Slide2.JPG"
               alt=""
               class="img-fluid shadow rounded"
             />
           </div>
-          <div class="col">
+          <div class="col-md-4 mb-5">
             <img
               src="/images/Slide3.JPG"
               alt=""
