--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Slide3.JPG" class="img-fluid" alt="" />
+          <img src="images/Slide3.JPG" class="img-fluid rounded" alt="" />
         </div>
         <div class="col">
           <h2>Croissant Website</h2>
@@ -90,12 +90,12 @@
           <a href="#" class="btn btn-primary shadow"> Launch weather app</a>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/Slide2.JPG" class="img-fluid" alt="" />
+          <img src="images/Slide2.JPG" class="img-fluid rounded" alt="" />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Slide1.JPG" class="img-fluid" alt="" />
+          <img src="images/Slide1.JPG" class="img-fluid rounded" alt="" />
         </div>
         <div class="col">
           <h2>AI App</h2>
