new navbar and images
added new navbar and build 2 images for work page

--- a/index.html
+++ b/index.html
@@ -19,36 +19,17 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">SEPIDE</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="/index.html"
-              >Home <span class="sr-only"></span
-            ></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about.html">About me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about.html#contact">Contanct me</a>
-          </li>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <h3>SEPIDE</h3>
+        <ul>
+          <a href="/"><li class="active">Home</li></a>
+          <a href="/work"><li>Work</li></a>
+          <a href="/about.html"><li>About me</li></a>
+          <a href="/about.html"><li>Contact me</li></a>
         </ul>
-      </div>
-    </nav>
-
+      </nav>
+    </div>
     <div class="top">
       <h2>👋 Hi I am</h2>
       <h1>Sepide Malek Mahmoudi</h1>
@@ -98,7 +79,7 @@
           <img src="images/Slide1.JPG" class="img-fluid rounded" alt="" />
         </div>
         <div class="col">
-          <h2>AI App</h2>
+          <h2>AI Landing page</h2>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Reprehenderit magni debitis ut velit totam distinctio quae deleniti
