--- a/about.html
+++ b/about.html
@@ -20,35 +20,17 @@
     <title>About me</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">SEPIDE</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="/index.html"
-              >Home <span class="sr-only"></span
-            ></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about.html">About me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about.html#contact">Contanct me</a>
-          </li>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <h3>SEPIDE</h3>
+        <ul>
+          <a href="/"><li>Home</li></a>
+          <a href="/work"><li>Work</li></a>
+          <a href="/about.html"><li>About me</li></a>
+          <a href="/about.html"><li>Contact me</li></a>
         </ul>
-      </div>
-    </nav>
+      </nav>
+    </div>
     <div class="top">
       <h1>About me</h1>
       <h2>🇮🇷 frontend developer and computer engineer based in Iran</h2>
