added new navbar

--- a/about.html
+++ b/about.html
@@ -26,44 +26,27 @@
         <ul>
           <a href="/"><li>Home</li></a>
           <a href="/work"><li>Work</li></a>
-          <a href="/about.html"><li>About me</li></a>
+          <a href="/about.html"><li class="active">About me</li></a>
           <a href="/about.html"><li>Contact me</li></a>
         </ul>
       </nav>
-    </div>
-    <div class="top">
-      <h1>About me</h1>
-      <h2>🇮🇷 frontend developer and computer engineer based in Iran</h2>
-      <div class="container">
-        <div class="row mt-5">
-          <div class="col-md-4 mb-5">
-            <img
-              src="/images/Slide1.JPG"
-              alt=""
-              class="img-fluid shadow rounded"
-            />
-          </div>
-          <div class="col-md-4 mb-5">
-            <img
-              src="/images/Slide2.JPG"
-              alt=""
-              class="img-fluid shadow rounded"
-            />
-          </div>
-          <div class="col-md-4 mb-5">
-            <img
-              src="/images/Slide3.JPG"
-              alt=""
-              class="img-fluid shadow rounded"
-            />
-          </div>
+      <div class="about-section">
+        <div class="col-lg-6">
+          <h1>Hi, I'm Sepide malek </h1>
+          <h2>🇮🇷 frontend developer and computer engineer based in Iran</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam
+            dolorem obcaecati quisquam quia soluta voluptate illum perspiciatis
+            incidunt accusamus, non reiciendis architecto velit rem? Impedit
+            nisi sapiente magnam sequi ratione quae dicta. Corrupti itaque
+            tenetur quasi natus doloremque dicta consequatur architecto magnam?
+            Minus ea vel quos facilis laboriosam, veritatis suscipit.
+          </p>
+          <a href="/work.html" class="btn btn-primary shadow"> See my projects</a>
+          
         </div>
+        <div class="col-lg-6"><img src="/images/sepide.jpg" class="rounded img-fluid" alt=""></div>
       </div>
     </div>
-
-    <h2 class="mt-5 text-center" id="contact">📮 Contact me</h2>
-    <a href="mailto:sepidemalekmahmoudi@gmail.com"
-      ><div class="text-center pb-5">"SEPIDE"</div></a
-    >
   </body>
 </html>
