--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>Portfolio</title>
   </head>
@@ -24,7 +28,7 @@
         <h3>SEPIDE</h3>
         <ul>
           <a href="/"><li class="active">Home</li></a>
-          <a href="/work"><li>Work</li></a>
+          <a href="/work.html"><li>Work</li></a>
           <a href="/about.html"><li>About me</li></a>
           <a href="/about.html"><li>Contact me</li></a>
         </ul>
@@ -92,5 +96,35 @@
         </div>
       </div>
     </div>
+    <footer class="container">
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h2 class="mt-3">Work inquiry</h2>
+          <p>Let's work together</p>
+        </div>
+        <div><a href="" class="btn btn-primary">contact me</a></div>
+      </div>
+      <div class="justify-content-center d-flex mb-4">
+        <a href="mailto:sepidemalekmahmoudi@gmail.com"
+          >sepidemalekmahmoudi@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a href="https://instagram.com/ioganesson" target="_blank" title="">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://telegram.com/ioganesson"
+          ><i class="fab fa-telegram"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/sepide-malek-mahmoudi-78057321a"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+      </div>
+
+      <p class="mt-4 mb-4 text-center end">
+        ✌️ This website was coded by Sepide Malek Mahmoudi, and is
+        <a href=""> open-sourced</a>
+      </p>
+    </footer>
   </body>
 </html>
