--- a/work.html
+++ b/work.html
@@ -35,36 +35,54 @@
         </ul>
       </nav>
     </div>
-    <div class="container">
+    <div class="container ">
+      <div class="content"><h1 class="text-center pt-5">
+        Take a look at what I've been working on!
+      </h1>
       <div class="row">
         <div class="col-6">
-          <img src="/images/Slide1.JPG" alt="" class="img-fluid pt-5" />
+          <img src="/images/Slide3.JPG" alt="" class="img-fluid mt-3 shadow" />
+
+          <h2 class="text-center mt-3">Croissant Landing Page</h2>
+          <p class="text-center">Built with HTML,CSS and JavaScript</p>
           <a href="#" class="btn btn-outline-dark">about me</a>
         </div>
+
         <div class="col-6">
-          <img src="/images/Slide1.JPG" alt="" class="img-fluid pt-5" /><a
-            href="#"
-            class="btn btn-outline-dark"
-            >about me</a
-          >
+          <img src="/images/Slide2.JPG" alt="" class="img-fluid mt-3 shadow" />
+
+          <h2 class="text-center mt-3">Weather App</h2>
+          <p class="text-center">
+            Built using HTML, and active API, and advanced CSS and JavaScripts
+          </p>
+          <a href="#" class="btn btn-outline-dark">about me</a>
         </div>
       </div>
       <div class="row">
         <div class="col-6">
-          <img src="/images/Slide1.JPG" alt="" class="img-fluid pt-5" /><a
-            href="#"
-            class="btn btn-outline-dark"
-            >about me</a
-          >
+          <img
+            src="/images/dictionary app.JPG"
+            alt=""
+            class="img-fluid mt-5 shadow"
+          />
+
+          <h2 class="text-center mt-3">Dictionary App</h2>
+          <p class="text-center">
+            Built using HTML, an active API, advandced CSS and React
+          </p>
+          <a href="#" class="btn btn-outline-dark">about me</a>
         </div>
+
         <div class="col-6">
-          <img src="/images/Slide1.JPG" alt="" class="img-fluid pt-5" /><a
-            href="#"
-            class="btn btn-outline-dark"
-            >about me</a
-          >
+          <img src="/images/Slide3.JPG" alt="" class="img-fluid mt-5 shadow" />
+
+          <h2 class="text-center mt-3">Translate App</h2>
+          <p class="text-center">
+            Built using HTML, an active API, advandced CSS and React
+          </p>
+          <a href="#" class="btn btn-outline-dark">about me</a>
         </div>
-      </div>
+      </div></div>
     </div>
     <footer class="container">
       <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
