--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a href="/"><li class="active">Home</li></a>
           <a href="/work.html"><li>Work</li></a>
           <a href="/about.html"><li>About me</li></a>
-          <a href="/about.html"><li>Contact me</li></a>
+          <a href="/contact.html"><li>Contact me</li></a>
         </ul>
       </nav>
     </div>
