--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
           <a href="/"><li>Home</li></a>
           <a href="/work.html"><li class="active">Work</li></a>
           <a href="/about.html"><li>About me</li></a>
-          <a href="/about.html"><li>Contact me</li></a>
+          <a href="/contact.html"><li>Contact me</li></a>
         </ul>
       </nav>
     </div>
@@ -40,26 +40,26 @@
         Take a look at what I've been working on!
       </h1>
       <div class="row">
-        <div class="col-6">
+        <div class="col-md-6 ">
           <img src="/images/Slide3.JPG" alt="" class="img-fluid mt-3 shadow" />
 
           <h2 class="text-center mt-3">Croissant Landing Page</h2>
           <p class="text-center">Built with HTML,CSS and JavaScript</p>
-          <a href="#" class="btn btn-outline-dark">about me</a>
+          <div class="text-center"><a href="#" class="btn btn-dark btn-project shadow" >Launch Project</a></div>
         </div>
 
-        <div class="col-6">
+        <div class="col-md-6">
           <img src="/images/Slide2.JPG" alt="" class="img-fluid mt-3 shadow" />
 
           <h2 class="text-center mt-3">Weather App</h2>
           <p class="text-center">
             Built using HTML, and active API, and advanced CSS and JavaScripts
           </p>
-          <a href="#" class="btn btn-outline-dark">about me</a>
+          <div class="text-center"><a href="#" class="btn btn-dark btn-project shadow" >Launch Project</a></div>
         </div>
       </div>
       <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
           <img
             src="/images/dictionary app.JPG"
             alt=""
@@ -70,17 +70,17 @@
           <p class="text-center">
             Built using HTML, an active API, advandced CSS and React
           </p>
-          <a href="#" class="btn btn-outline-dark">about me</a>
+          <div class="text-center"><a href="#" class="btn btn-dark btn-project shadow" >Launch Project</a></div>
         </div>
 
-        <div class="col-6">
+        <div class="col-md-6">
           <img src="/images/Slide3.JPG" alt="" class="img-fluid mt-5 shadow" />
 
           <h2 class="text-center mt-3">Translate App</h2>
           <p class="text-center">
             Built using HTML, an active API, advandced CSS and React
           </p>
-          <a href="#" class="btn btn-outline-dark">about me</a>
+          <div class="text-center"><a href="#" class="btn btn-dark btn-project shadow" >Launch Project</a></div>
         </div>
       </div></div>
     </div>
