--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Work</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +22,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
-    <title>About me</title>
   </head>
   <body>
     <div class="container">
@@ -30,31 +30,45 @@
         <ul>
           <a href="/"><li>Home</li></a>
           <a href="/work.html"><li>Work</li></a>
-          <a href="/about.html"><li class="active">About me</li></a>
-          <a href="/contact.html"><li>Contact me</li></a>
+          <a href="/about.html"><li>About me</li></a>
+          <a href="/contact.html"><li class="active">Contact me</li></a>
         </ul>
       </nav>
     </div>
     <div class="background">
       <div class="container">
-        <div class="about-section">
-          <div class="row p-5">
-            <div class="col-lg-6">
-              <h1 class="pt-5 pt-md-0">Hi, I'm Sepide Malek Mahmoudi</h1>
-              <h2>🇮🇷 frontend developer and computer engineer based in Iran</h2>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam
-                dolorem obcaecati quisquam quia soluta voluptate illum
-                perspiciatis incidunt accusamus, non reiciendis architecto velit
-                rem?
-              </p>
-              <a href="/work.html" class="btn btn-primary shadow">
-                See my projects</a
-              >
+        <div class="row">
+          <div class="col">
+            <div class="form">
+              <form>
+                <div class="form-group">
+                  <label for="exampleFormControlInput1">Email address</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="exampleFormControlInput1"
+                    placeholder="name@example.com"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlTextarea1"
+                    >Example textarea</label
+                  >
+                  <textarea
+                    class="form-control"
+                    id="exampleFormControlTextarea1"
+                    rows="3"
+                  ></textarea>
+                </div>
+              </form>
             </div>
-            <div class="col-lg-6">
-              <img src="/images/sepide.jpg" class="img-fluid" alt="" />
-            </div>
+          </div>
+          <div class="col">
+            <h2>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque
+              quo reiciendis architecto delectus aliquid incidunt temporibus sed
+              est, magni corrupti!
+            </h2>
           </div>
         </div>
       </div>
@@ -83,13 +97,11 @@
           ><i class="fab fa-linkedin"></i
         ></a>
       </div>
-      
-        <p class="mt-4 mb-4 text-center end">
-          ✌️ This website was coded by Sepide Malek Mahmoudi, and is <a href="">
-            open-sourced</a
-          >
-        </p>
-      
+
+      <p class="mt-4 mb-4 text-center end">
+        ✌️ This website was coded by Sepide Malek Mahmoudi, and is
+        <a href=""> open-sourced</a>
+      </p>
     </footer>
   </body>
 </html>
