completed contact page and make it responsive
added projects' link
but it still needs SEO

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <h3>SEPIDE</h3>
         <ul>
           <a href="/"><li class="active">Home</li></a>
-          <a href="/work.html"><li>Work</li></a>
-          <a href="/about.html"><li>About me</li></a>
+          <a href="/about.html"><li>About me</li></a
+          ><a href="/work.html"><li>Work</li></a>
           <a href="/contact.html"><li>Contact me</li></a>
         </ul>
       </nav>
@@ -38,8 +38,8 @@
       <h2>👋 Hi I am</h2>
       <h1>Sepide Malek Mahmoudi</h1>
       <h2>🇮🇷 frontend developer and computer engineer based in Iran</h2>
-      <a href="#" class="btn btn-primary shadow"> contact me</a>
-      <a href="#" class="btn btn-outline-dark">about me</a>
+      <a href="/contact.html" class="btn btn-primary shadow"> contact me</a>
+      <a href="about.html" class="btn btn-outline-dark">about me</a>
     </div>
     <div class="container">
       <div class="row mb-5">
@@ -56,7 +56,10 @@
             quos fugit numquam ipsum, consequatur vero corporis temporibus sed
             repudiandae nesciunt autem ullam dolor. Cupiditate, itaque aut.
           </p>
-          <a href="#" class="btn btn-primary shadow">
+          <a
+            href="https://glittering-maamoul-8670d0.netlify.app/"
+            class="btn btn-primary shadow"
+          >
             Launch croissant website</a
           >
         </div>
@@ -72,18 +75,27 @@
             quos fugit numquam ipsum, consequatur vero corporis temporibus sed
             repudiandae nesciunt autem ullam dolor. Cupiditate, itaque aut.
           </p>
-          <a href="#" class="btn btn-primary shadow"> Launch weather app</a>
+          <a
+            href="https://celebrated-crisp-7ea4a6.netlify.app/"
+            class="btn btn-primary shadow"
+          >
+            Launch weather app</a
+          >
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/Slide2.JPG" class="img-fluid rounded" alt="" />
+          <img src="images/wheater app.jpg" class="img-fluid rounded" alt="" />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Slide1.JPG" class="img-fluid rounded" alt="" />
+          <img
+            src="images/dictionary app.JPG"
+            class="img-fluid rounded"
+            alt=""
+          />
         </div>
         <div class="col">
-          <h2>AI Landing page</h2>
+          <h2>Dictionary App</h2>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Reprehenderit magni debitis ut velit totam distinctio quae deleniti
