--- a/work.html
+++ b/work.html
@@ -28,61 +28,91 @@
       <nav class="d-flex justify-content-between">
         <h3>SEPIDE</h3>
         <ul>
-          <a href="/"><li>Home</li></a>
-          <a href="/work.html"><li class="active">Work</li></a>
-          <a href="/about.html"><li>About me</li></a>
+          <a href="/"><li >Home</li></a>
+          <a href="/about.html"><li >About me</li></a
+          ><a href="/work.html"><li class="active">Work</li></a>
           <a href="/contact.html"><li>Contact me</li></a>
         </ul>
       </nav>
     </div>
-    <div class="container ">
-      <div class="content"><h1 class="text-center pt-5">
-        Take a look at what I've been working on!
-      </h1>
-      <div class="row">
-        <div class="col-md-6 ">
-          <img src="/images/Slide3.JPG" alt="" class="img-fluid mt-3 shadow" />
+    <div class="container">
+      <div class="content">
+        <h1 class="text-center pt-5">
+          Take a look at what I've been working on!
+        </h1>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="/images/Slide3.JPG"
+              alt=""
+              class="img-fluid mt-3 shadow"
+            />
 
-          <h2 class="text-center mt-3">Croissant Landing Page</h2>
-          <p class="text-center">Built with HTML,CSS and JavaScript</p>
-          <div class="text-center"><a href="#" class="btn btn-dark btn-project shadow" >Launch Project</a></div>
+            <h2 class="text-center mt-3">Croissant Landing Page</h2>
+            <p class="text-center">Built with HTML,CSS and JavaScript</p>
+            <div class="text-center">
+              <a href="https://glittering-maamoul-8670d0.netlify.app/" class="btn btn-dark btn-project shadow"
+                >Launch Project</a
+              >
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <img
+              src="/images/Slide2.JPG"
+              alt=""
+              class="img-fluid mt-3 shadow"
+            />
+
+            <h2 class="text-center mt-3">Weather App</h2>
+            <p class="text-center">
+              Built using HTML, and active API, and advanced CSS and JavaScripts
+            </p>
+            <div class="text-center">
+              <a href="https://celebrated-crisp-7ea4a6.netlify.app/" class="btn btn-dark btn-project shadow"
+                >Launch Project</a
+              >
+            </div>
+          </div>
         </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="/images/dictionary app.JPG"
+              alt=""
+              class="img-fluid mt-5 shadow"
+            />
 
-        <div class="col-md-6">
-          <img src="/images/Slide2.JPG" alt="" class="img-fluid mt-3 shadow" />
+            <h2 class="text-center mt-3">Dictionary App</h2>
+            <p class="text-center">
+              Built using HTML, an active API, advandced CSS and React
+            </p>
+            <div class="text-center">
+              <a href="#" class="btn btn-dark btn-project shadow"
+                >Launch Project</a
+              >
+            </div>
+          </div>
 
-          <h2 class="text-center mt-3">Weather App</h2>
-          <p class="text-center">
-            Built using HTML, and active API, and advanced CSS and JavaScripts
-          </p>
-          <div class="text-center"><a href="#" class="btn btn-dark btn-project shadow" >Launch Project</a></div>
+          <div class="col-md-6">
+            <img
+              src="/images/translate app.JPG"
+              alt=""
+              class="img-fluid mt-5 shadow"
+            />
+
+            <h2 class="text-center mt-3">Translate App</h2>
+            <p class="text-center">
+              Built using HTML, an active API, advandced CSS and React
+            </p>
+            <div class="text-center">
+              <a href="#" class="btn btn-outline-dark btn-project shadow"
+                >Coming soon!</a
+              >
+            </div>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <img
-            src="/images/dictionary app.JPG"
-            alt=""
-            class="img-fluid mt-5 shadow"
-          />
-
-          <h2 class="text-center mt-3">Dictionary App</h2>
-          <p class="text-center">
-            Built using HTML, an active API, advandced CSS and React
-          </p>
-          <div class="text-center"><a href="#" class="btn btn-dark btn-project shadow" >Launch Project</a></div>
-        </div>
-
-        <div class="col-md-6">
-          <img src="/images/Slide3.JPG" alt="" class="img-fluid mt-5 shadow" />
-
-          <h2 class="text-center mt-3">Translate App</h2>
-          <p class="text-center">
-            Built using HTML, an active API, advandced CSS and React
-          </p>
-          <div class="text-center"><a href="#" class="btn btn-dark btn-project shadow" >Launch Project</a></div>
-        </div>
-      </div></div>
     </div>
     <footer class="container">
       <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
