--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
       <nav class="d-flex justify-content-between">
         <h3>SEPIDE</h3>
         <ul>
-          <a href="/"><li>Home</li></a>
-          <a href="/work.html"><li>Work</li></a>
-          <a href="/about.html"><li class="active">About me</li></a>
+          <a href="/"><li >Home</li></a>
+          <a href="/about.html"><li class="active">About me</li></a
+          ><a href="/work.html"><li>Work</li></a>
           <a href="/contact.html"><li>Contact me</li></a>
         </ul>
       </nav>
