--- a/contact.html
+++ b/contact.html
@@ -28,32 +28,31 @@
       <nav class="d-flex justify-content-between">
         <h3>SEPIDE</h3>
         <ul>
-          <a href="/"><li>Home</li></a>
-          <a href="/work.html"><li>Work</li></a>
-          <a href="/about.html"><li>About me</li></a>
+          <a href="/"><li >Home</li></a>
+          <a href="/about.html"><li >About me</li></a
+          ><a href="/work.html"><li >Work</li></a>
           <a href="/contact.html"><li class="active">Contact me</li></a>
         </ul>
       </nav>
     </div>
     <div class="background">
       <div class="container">
+        <h1 class="pt-5">Let's get in touch!</h1>
         <div class="row">
-          <div class="col">
+          <div class="col-md-8">
+            
             <div class="form">
               <form>
                 <div class="form-group">
-                  <label for="exampleFormControlInput1">Email address</label>
+                  <label for="exampleFormControlInput1">Your email:</label>
                   <input
                     type="email"
                     class="form-control"
                     id="exampleFormControlInput1"
-                    placeholder="name@example.com"
                   />
                 </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1"
-                    >Example textarea</label
-                  >
+                <div class="form-group mt-3">
+                  <label for="exampleFormControlTextarea1">Your message:</label>
                   <textarea
                     class="form-control"
                     id="exampleFormControlTextarea1"
@@ -61,14 +60,23 @@
                   ></textarea>
                 </div>
               </form>
+              <a href="#" class="btn btn-dark shadow mb-0">Send</a>
             </div>
           </div>
-          <div class="col">
-            <h2>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque
-              quo reiciendis architecto delectus aliquid incidunt temporibus sed
-              est, magni corrupti!
-            </h2>
+          <div class="col-md-4">
+            <div class="contact-me mt-5 ">
+              <h3>Email:</h3>
+              <a href="mailto:sepidemalekmahmoudi@gmail.com" 
+                >sepidemalekmahmoudi@gmail.com</a
+              >
+              <h3>Instagram:</h3>
+              <a href="https://instagram.com/ioganesson" >ioganesson</a>
+              <h3>LinkedIn:</h3>
+              <a
+                href="https://www.linkedin.com/in/sepide-malek-mahmoudi-78057321a"
+                >Sepide Malekmahmoudi</a
+              >
+            </div>
           </div>
         </div>
       </div>
