maked it SEO friendly and uploaded to netlify

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
-    <title>About me</title>
+    <title>About Sepide</title>
   </head>
   <body>
     <div class="container">
@@ -85,7 +85,7 @@
       </div>
       
         <p class="mt-4 mb-4 text-center end">
-          ✌️ This website was coded by Sepide Malek Mahmoudi, and is <a href="">
+          ✌️ This website was coded by Sepide Malek Mahmoudi, and is <a href="https://github.com/IOGANESSON/porffolio-project">
             open-sourced</a
           >
         </p>
