--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Work</title>
+    <title>Contact Sepide</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -60,7 +60,7 @@
                   ></textarea>
                 </div>
               </form>
-              <a href="#" class="btn btn-dark shadow mb-0">Send</a>
+              <a href="#" class="btn btn-dark shadow mb-1">Send</a>
             </div>
           </div>
           <div class="col-md-4">
@@ -108,7 +108,7 @@
 
       <p class="mt-4 mb-4 text-center end">
         ✌️ This website was coded by Sepide Malek Mahmoudi, and is
-        <a href=""> open-sourced</a>
+        <a href="https://github.com/IOGANESSON/porffolio-project"> open-sourced</a>
       </p>
     </footer>
   </body>
