--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="Sepide Malek Mahmoudi is a frontend developer based in Iran"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,7 +23,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
-    <title>Portfolio</title>
+    <title>Frond-end Developer - Sepide Malek Mahmoudi</title>
   </head>
   <body>
     <div class="container">
@@ -35,11 +38,13 @@
       </nav>
     </div>
     <div class="top">
-      <h2>👋 Hi I am</h2>
-      <h1>Sepide Malek Mahmoudi</h1>
-      <h2>🇮🇷 frontend developer and computer engineer based in Iran</h2>
-      <a href="/contact.html" class="btn btn-primary shadow"> contact me</a>
-      <a href="about.html" class="btn btn-outline-dark">about me</a>
+      <div class="container">
+        <h2>👋 Hi I am</h2>
+        <h1>Sepide Malek Mahmoudi</h1>
+        <h2>🇮🇷 frontend developer and computer engineer based in Iran</h2>
+        <a href="/contact.html" class="btn btn-primary shadow"> contact me</a>
+        <a href="about.html" class="btn btn-outline-dark shad">about me</a>
+      </div>
     </div>
     <div class="container">
       <div class="row mb-5">
@@ -135,7 +140,9 @@
 
       <p class="mt-4 mb-4 text-center end">
         ✌️ This website was coded by Sepide Malek Mahmoudi, and is
-        <a href=""> open-sourced</a>
+        <a href="https://github.com/IOGANESSON/porffolio-project">
+          open-sourced</a
+        >
       </p>
     </footer>
   </body>
