--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Work</title>
+    <title>Sepide's Works</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -106,7 +106,7 @@
               Built using HTML, an active API, advandced CSS and React
             </p>
             <div class="text-center">
-              <a href="#" class="btn btn-outline-dark btn-project shadow"
+              <a href="#" class="btn btn-outline-dark btn-project "
                 >Coming soon!</a
               >
             </div>
@@ -141,7 +141,7 @@
 
       <p class="mt-4 mb-4 text-center end">
         ✌️ This website was coded by Sepide Malek Mahmoudi, and is
-        <a href=""> open-sourced</a>
+        <a href="https://github.com/IOGANESSON/porffolio-project"> open-sourced</a>
       </p>
     </footer>
   </body>
