added radius to images

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Slide3.JPG" class="img-fluid rounded" alt="" />
+          <img src="images/Slide3.JPG" class="img-fluid " alt="" />
         </div>
         <div class="col">
           <h2>Croissant Website</h2>
@@ -88,14 +88,14 @@
           >
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/wheater app.jpg" class="img-fluid rounded" alt="" />
+          <img src="images/wheater app.jpg" class="img-fluid " alt="" />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
             src="images/dictionary app.JPG"
-            class="img-fluid rounded"
+            class="img-fluid "
             alt=""
           />
         </div>
